--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
             mobler: { 1: 565, 2: 625, 3: 760, 4: 980, 5: 1145, 6: 1375, 7: 1565 },
             mediaOgFritid: { 1: 2520, 2: 2560, 3: 2700, 4: 2790, 5: 2820, 6: 2850, 7: 2850 },
             bilkostnader: {
-                "Bensin": { "1-4": 3300, "5-7": 4990 },
+                "Bensin/Diesel": { "1-4": 3300, "5-7": 4990 },
                 "El-bil": { "1-4": 2195, "5-7": 3015 }
             }
         };
@@ -783,7 +783,7 @@
                 group.innerHTML = `
                     <h5>Bil ${i + 1}</h5>
                     <select id="carType${i}" onchange="calculateBudget()">
-                        <option value="Bensin">Bensinbil</option>
+                        <option value="Bensin/Diesel">Bensin/Diesel</option>
                         <option value="El-bil">El-bil</option>
                     </select>
                 `;
