--- a/index.html
+++ b/index.html
@@ -614,15 +614,15 @@
                     <h5 style="margin-bottom: 8px; font-size: 13px; color: #666;">Voksen ${i + 1}</h5>
                     <div class="form-group" style="margin-bottom: 8px;">
                         <label style="margin-bottom: 3px; font-size: 13px;">Månedslønn (kr)</label>
-                        <input type="number" id="adultIncome${i}" value="50000" min="0" step="1000" onchange="calculateTotalNetIncome()">
+                        <input type="number" id="adultIncome${i}" value="50000" min="0" step="1000" onchange="calculateTotalNetIncome(); calculateBudget();">
                     </div>
                     <div class="form-group" style="margin-bottom: 8px;">
                         <label style="margin-bottom: 3px; font-size: 13px;">Skatt (kr/måned)</label>
-                        <input type="number" id="adultTaxAmount${i}" value="0" min="0" step="100" onchange="handleAdultTaxInput(${i})" style="font-size: 13px;">
+                        <input type="number" id="adultTaxAmount${i}" value="0" min="0" step="100" onchange="handleAdultTaxInput(${i}); calculateBudget();" style="font-size: 13px;">
                     </div>
                     <div class="form-group">
                         <label style="margin-bottom: 3px; font-size: 13px;">Skatt (%)</label>
-                        <input type="number" id="adultTaxPercent${i}" value="0" min="0" max="100" step="0.1" onchange="handleAdultTaxPercentInput(${i})" style="font-size: 13px;">
+                        <input type="number" id="adultTaxPercent${i}" value="0" min="0" max="100" step="0.1" onchange="handleAdultTaxPercentInput(${i}); calculateBudget();" style="font-size: 13px;">
                     </div>
                 `;
                 container.appendChild(group);
@@ -630,7 +630,7 @@
 
             // Oppdater budsjett-panelet når antall voksne endres
             updateAdultInputs();
-            calculateTotalNetIncome();
+            // calculateTotalNetIncome vil bli kalt fra calculateBudget()
         }
 
         function handleAdultTaxInput(index) {
@@ -742,6 +742,7 @@
                 container.appendChild(group);
             }
             calculateBudget();
+            calculateTotalNetIncome();
         }
 
         function updateChildInputs() {
